# Simple-FastAPI-CRUD-Example

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: logger.py  main.py
app/api/: health.py
app/api/v1/: api.py
app/api/v1/endpoints/: member.py
app/core/: config.py
app/db/: __init__.py  postgresql.py
app/middlewares/: __init__.py
app/models/: __init__.py  common.py  member.py
app/schemas/: __init__.py  member.py
