[project]
name = "simple-fastapi-crud-example"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.31.0",
    "fastapi~=0.135.3",
    "greenlet==3.3.2",
    "loguru~=0.7.3",
    "phonenumbers==9.0.27",
    "psutil==7.2.2",
    "pydantic[email]==2.12.5",
    "pydantic-extra-types~=2.11.1",
    "pydantic-settings==2.13.1",
    "sqlmodel==0.0.37",
    "starlette~=1.0.0",
    "uuid~=1.30",
    "uvicorn==0.42.0",
    "pandas==3.0.2",
    "coverage==7.13.5",
    "black==26.3.1",
    "isort==8.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage[toml]>=7.8.2",
    "isort>=6.0.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]


[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E203",  # whitespace-before-punctuation
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
unfixable = [
    "B"  # flake8-bugbear
]

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "E402",  # module-import-not-at-top-of-file
    "F401"  # Module imported but unused
]

[tool.ruff.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = [
    "def __repr__",
    "if TYPE_CHECKING:",
]
